<resources>
    <string name="app_name">My Application</string>
    <string name="pppppppppppp">PPPPPPPPPPPP</string>
    <string name="toast">toast</string>
    <string name="ham">ham</string>
    <string name="egg">egg</string>
    <string name="breakfast">我的早餐</string>
    <string name="back_to_start">back to start</string>
    <string name="start">start</string>
    <string name="test">test</string>
    <string name="下一頁">next_page</string>
    <string name="name">Name</string>
    <string name="hello_this_is_send_page">hello this is send page</string>
    <string name="choose_btn">選擇照片</string>
    <string name="sure">確定</string>
    <string name="_1000">1000</string>
    <string name="eat">eat</string>
    <string name="money_20_n_food_28">money-20\n food+28</string>
    <string name="back_to_home">BACK TO HOME</string>
    <string name="buy">Buy</string>
    <string name="money">money</string>
    <string name="_100">100</string>
    <string name="food">food</string>
    <string name="money_5_n_food_5">money-5\n food+5</string>
    <string name="money_10_n_food_12">money-10\n food+12</string>
    <string name="money_12_n_food_15">money-12\n food+15</string>
    <string name="money_15_n_food_20">money-15\n food+20</string>
    <string name="money_25_n_food_35">money-25\n food+35</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>


</resources>